--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
 name = "MyPasswordManager"
 version = "1.0.0"
-description = "A basic password manager built with Flask"
+description = "A basic password manager application built with Flask"
 dependencies = [
     "flask",
     "SQLAlchemy",
-    "dataclasses",
     "pytz",
     "cryptography",
     "Flask-WTF",
